@@ -9,7 +9,6 @@ import edu.colorado.phet.common.piccolophet.nodes.ResetAllButtonNode;
 import edu.colorado.phet.common.piccolophet.nodes.kit.ZeroOffsetNode;
 import edu.colorado.phet.fractionsintro.common.view.AbstractFractionsCanvas;
 import edu.colorado.phet.fractionsintro.intro.model.FractionsIntroModel;
-import edu.colorado.phet.fractionsintro.intro.tests.PieSetNode;
 import edu.colorado.phet.fractionsintro.intro.view.bucket.BucketNode;
 import edu.colorado.phet.fractionsintro.intro.view.representationcontrolpanel.RepresentationControlPanel;
 
@@ -32,7 +31,7 @@ public class FractionsIntroCanvas extends AbstractFractionsCanvas {
         }};
         addChild( representationArea );
 
-        addChild( new PieSetNode( model.pieSetState ) );
+//        addChild( new PieSetNode( model.pieSetState ) );
 
         ZeroOffsetNode fractionEqualityPanel = new ZeroOffsetNode( new FractionEqualityPanel( model ) ) {{
             setOffset( 35, STAGE_SIZE.getHeight() - getFullBounds().getHeight() );
